# mlex

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
crates/mlex/: Cargo.toml  README.md  build.rs
crates/mlex-node/: Cargo.toml  README.md
crates/mlex-node/src/: lib.rs
crates/mlex/examples/: capability_check.rs  generate.rs  measure_memory.rs  reasoning.rs
crates/mlex/src/: array.rs  error.rs  generate.rs  lib.rs  nn.rs  ops.rs  prompt_cache.rs  quant.rs  reasoning.rs  sampling.rs  stream.rs  streaming.rs  sys.rs  tokenizer.rs  tools.rs  weights.rs
crates/mlex/src/media/: audio.rs  image.rs  mod.rs  video.rs
crates/mlex/src/models/: base.rs  cache.rs  config.rs  dhara.rs  gated_delta.rs  mamba2.rs  mod.rs  moe.rs  nemotron.rs  qwen2.rs  qwen3.rs
crates/mlex/src/models/gemma4/: audio.rs  mod.rs  unified.rs  vision.rs
crates/mlex/src/models/qwen3_5/: mod.rs  vision.rs
crates/mlex/tests/: architectures.rs  generate_basic.rs  generate_sampling.rs  multi_modal.rs  multi_turn.rs  prompt_cache.rs  qwen35_vision.rs  system_prompt.rs  tool_calling.rs
crates/mlex/tests/common/: mod.rs
scripts/: ci-download-models.sh  coverage-rust.sh
